transitions paused while btn hovered - changed hidden class from diplay none to opacity 0 to avoid layout shifts

--- a/styles/TitleCarousel.module.css
+++ b/styles/TitleCarousel.module.css
@@ -27,6 +27,7 @@
     background-color: transparent;
     border: transparent;
     font-family: var(--main-text);
+    z-index: 3;
 }
 
 .btn:hover {
@@ -34,7 +35,7 @@
 }
 
 .hidden {
-    display: none;
+    opacity: 0;
 }
 
 .notHidden {
